fixed the navbar icon spacing issue

--- a/app/assets/stylesheets/components/_lower_navbar.scss
+++ b/app/assets/stylesheets/components/_lower_navbar.scss
@@ -10,8 +10,7 @@
     .lower-navbar-strip {
       position: absolute;
       bottom: 0;
-      left: 0;
-      right: 0;
+      width: 100%;
       height: 50px;
       background-color: #f8f9fa;
       box-shadow: 0px -6px 16px -5px rgba(102,64,166,1);
@@ -21,42 +20,18 @@
     .lower-navbar-buttons {
       position: absolute;
       bottom: 0;
-      left: 0;
-      right: 0;
+      width: 100%;
       height: 50px;
       display: flex;
-      align-items: center;
+      padding-top: 10px;
       justify-content: space-around;
 
-      .back-btn-container {
+      .navbar-btn-container {
         width: 30px;
+        height: 30px;
         display: flex;
         justify-content: space-around;
       }
-
-      // .poke-btn-container {
-        // position: relative;
-        // width: 64px;
-        // height: 64px;
-
-      //   .poke-btn {
-      //     position: absolute;
-      //     bottom: 8px;
-      //     border-radius: 50%;
-      //     height: 64px;
-      //     width: 64px;
-      //     background-color: white;
-      //     border: 7px solid $dark-purple;
-      //     display: flex;
-      //     align-items: center;
-      //     justify-content: space-around;
-
-      //     .fas {
-      //       color: $dark-purple;
-      //     }
-      //   }
-      // }
-
 
       .fas {
         color: $purple;
@@ -69,10 +44,6 @@
       }
     }
   }
-}
-
-.navbar-space {
-  height: 35px;
 }
 
 .navbar-messages {
