--- a/app/assets/stylesheets/users/_profile.scss
+++ b/app/assets/stylesheets/users/_profile.scss
@@ -1,5 +1,6 @@
 .page-content.profile {
   position:relative;
+  overflow: hidden;
 }
 
 .profile-photo {
